src/PJ/POCO/TEST/NEG/NDOLLA03.POC
/* Checks to see that '$' character doesn't bomb error handler */
#pragma poco echo "expect>expecting a number, variable, or string got '$'"

main()
{
int i;

i = 10 $ 11;
puts("This shouldn't compile");
}
